# hrs-launcher

./: AGENTS.md  AppIcon.icns  Cargo.toml  README.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
assets/: jre.json
src/: env.rs  main.rs  util.rs
src/diagnostics/: mod.rs
src/engine/: mod.rs  models.rs  state.rs
src/jre/: mod.rs
src/mods/: mod.rs
src/networking/: mod.rs
src/process/: mod.rs
src/pwr/: butler.rs  mod.rs
src/storage/: mod.rs
src/ui/: i18n.rs  mod.rs
src/updater/: mod.rs
