[package]
name = "hrs-launcher"
version = "0.1.5"
edition = "2024"

[dependencies]
eframe = { version = "0.27", features = ["wgpu"] }
indicatif = "0.18.3"
open = "5.3.3"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
scraper = "0.20.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "time"] }
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
icns = "0.3"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
walkdir = "2"
log = "0.4.29"
env_logger = "0.11"
sysinfo = "0.29"

[profile.release]
# Keep builds small and fast to launch.
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
